Move pages into src

--- a/src/panel.html
+++ b/src/panel.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <title></title>
-    <script type="module" src="./src/panel.js"></script>
+    <script type="module" src="./panel.js"></script>
   </head>
   <body>
     Animer
