Install and config svelte Move pages at root level

--- a/devtools.html
+++ b/devtools.html
@@ -3,6 +3,6 @@
     <title></title>
   </head>
   <body>
-    <script type="module" src="./devtools.js"></script>
+    <script type="module" src="./src/devtools.js"></script>
   </body>
 </html>
