--- a/panel.html
+++ b/panel.html
@@ -1,9 +1,8 @@
 <html lang="en">
   <head>
     <title></title>
-    <script type="module" src="./panel.js"></script>
   </head>
   <body>
-    Animer
+    <script type="module" src="./src/panel.js"></script>
   </body>
 </html>
