--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
     </style>
   </head>
   <body>
-    <!--  This page serves as a development environment -->
-    <script type="module" src="./src/panel.js"></script>
     <p class="example">Example</p>
+    <!--  This page serves as a development environment -->
+    <script type="module">
+      import Animer from './src/Animer.svelte'
+      new Animer({
+        target: document.body,
+        props: { animations: document.getAnimations() }
+      })
+    </script>
   </body>
 </html>
